# resilient-mini-apps

analysis/: dynamic-scaling-sim.py  plot-checkpoint-overhead.py  plot-checkpoint-strategies.py  plot-failure-impact.py  plot-imbalance-impact.py  plot-indicators-iterations.py  plot-indicators-time.py  plot-load-balancing.py  plot-load-benchmarking.py  plot-quality-improvement.py  plot-quality-indicators.py  plot-quality-time.py  plot-runtime-datasets.py  plot-runtime-failure-prob.py  plot-runtime-iterations.py  plot-runtime-resilient.py  plot-runtime-scalability.py  plot-runtime-sizes.py  plot-runtime-tomo.py  plot-runtime.py  plot-sync-async.py  quality-iterations.py  quality-time.py  recon-data-gen.py  scaling-sim.py  static-scaling-sim.py
include/tracelib/: data_region_a.h
src/art_simple/: CMakeLists.txt  README.md  art_simple.cc  art_simple.cfg  art_simple.def  build.sh  cmd  main-ckpt-blocking.cc  main-ckpt-none.cc  main-ckpt-quality-analysis.cc  main-ckpt-veloc.cc  main-data-balance.cc  main-failure-impact.cc  main-fixed-failures.cc  main-frame-add.cc  main-frame-skip.cc  main-imbalance-impact.cc  main-naive.cc  main-onoff.cc  main-origin.cc  main-rescale.cc  main-static-redis.cc  main-sync-recovery-imbalance.cc  main-sync-recovery.cc  main.cc  run_analysis.sh  submit-art-simple.sh  tomo_recon.cc  tomo_recon.h
src/art_simple/analysis/: quality-time.py
src/art_simple/tomo/include/: mlem_simple.h  sirt_simple.h  tomo_common.h
src/art_simple/tomo/src/: art_simple.cc  mlem_simple.cc  sirt_simple.cc  tomo_common.cc
src/sirt/: CMakeLists.txt  sirt_stream.cfg  sirt_stream_main.cc  streamer-sirt.def
